<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.example</groupId>
    <artifactId>FinalChess</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!--  JUnit 5  -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>

        <!--  JUnit 4 Dependency  -->
        <!--         <dependency> -->
        <!--             <groupId>junit</groupId> -->
        <!--             <artifactId>junit</artifactId> -->
        <!--             <version>4.13.2</version> -->
        <!--             <scope>test</scope> -->
        <!--         </dependency> -->
        <!--   Using org.apache.commons.lang3.StringUtils;  -->

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.13.0</version>
        </dependency>
        <!--  read JSON file  -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.1</version>
        </dependency>
        <!--  websocket support  -->
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.3.0</version>
        </dependency>
        <!--  mockito support  -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.12.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.12.0</version>
            <!--  Use the same version as mockito-core  -->
        </dependency>
        <!--  Selenium WebDriver  -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.12.0</version>
        </dependency>

        <!-- cucumber -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>7.13.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <version>7.13.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Selenium WebDriver -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.12.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>

                <configuration>
                    <excludes>
                        <exclude>**/RunCucumberTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Pitest Plugin Configuration for JUnit 5 -->

            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.15.2</version>
                <dependencies>
                    <dependency>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>1.2.1</version>
                    </dependency>
                </dependencies>
                <configuration>
<!--                    <targetClasses>-->
<!--                        <param>network.*</param>-->
<!--                    </targetClasses>-->
<!--                    <targetTests>-->
<!--                        <param>network.*Test</param>-->
<!--                    </targetTests>-->
                    <excludedClasses>
                        <class>network.*</class>
                    </excludedClasses>
                    <excludedTestClasses>
                        <class>network.*</class>
                    </excludedTestClasses>
                    <mutators>STRONGER</mutators>
                    <threads>1</threads>
<!--                    <timeoutConstant>100</timeoutConstant>-->

                    <outputFormats>
                        <param>HTML</param>
                    </outputFormats>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.25.0</version>
                <configuration>
                    <rulesets>
                        <ruleset>src/main/resources/rule_set.xml</ruleset>
                    </rulesets>
                    <format>html</format>
                    <!--  or "html", "text", "plain", etc.  -->
                    <!--  ture will cause building fail if violate  -->
                    <failOnViolation>false</failOnViolation>
                    <!--  1 is the most critical violation;
                                             1: critical; 2: major; 3: normal;
                                             4: minor; 5: information
                                             if you set 5, the report will show all violation
                                         -->
                    <minimumPriority> 3 </minimumPriority>
                </configuration>
                <executions>
                    <execution>
                        <phase> verify </phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <configuration>
                    <excludes>
                        <exclude>Main.class</exclude>
                        <exclude>game/ChessGame.class</exclude>
                    </excludes>
                </configuration>

                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>